syntax = "proto3";
package models;
option go_package = "./models";

import "github.com/infobloxopen/protoc-gen-gorm/options/gorm.proto";

message Address {
  option (gorm.opts) = {ormable: true};

  // BlockETL
  string address = 1 [(gorm.field).tag = {primary_key: true}];
  bool is_contract = 2 [(gorm.field).tag = {index: "address_idx_is_contract"}];
  int64 transaction_count = 3 [(gorm.field).tag = {index: "address_idx_transaction_count"}];
  int64 transaction_internal_count = 4 [(gorm.field).tag = {index: "address_idx_transaction_internal_count"}];
  int64 log_count = 5 [(gorm.field).tag = {index: "address_idx_log_count"}];
  int64 token_transfer_count = 6 [(gorm.field).tag = {index: "address_idx_token_transfer_count"}];
  double balance = 7 [(gorm.field).tag = {index: "address_idx_balance"}];
  string type = 8;

  // Contracts Processed
  string name = 9 [(gorm.field).tag = {index: "address_idx_contract_name"}];
  string status = 10;
  int64 created_timestamp = 11 [(gorm.field).tag = {index: "address_idx_created_timestamp"}];
  bool is_token = 12 [(gorm.field).tag = {index: "address_idx_is_token"}];
  int64 contract_updated_block = 14;

  string contract_type = 15 [(gorm.field).tag = {index: "address_idx_contract_type"}];
  string token_standard = 16 [(gorm.field).tag = {index: "address_idx_token_standard"}];

  // Governance Prep Processed 
  bool is_prep = 13 [(gorm.field).tag = {index: "address_idx_is_governance_prep"}];
}
