syntax = "proto3";
package models;
option go_package = "./models";

// Used for proto and gorm
message ContractProcessed {
  string address = 1;
  string name = 2;
  int64 created_timestamp = 3;
  string status = 4;
  bool is_token = 5;
  int64 contract_updated_block = 6;
  string contract_type = 7;
  string token_standard = 8;
}
